--- a/project/templates/poner/tema.html
+++ b/project/templates/poner/tema.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{% from "includes/_formhelpers.html" import render_field %}
+{% from "includes/_formhelpers.html" import render_field, render_delete_field %}
 
 <div>
     <br>
@@ -14,7 +14,7 @@
         <br>
         <div class="center-block skinny">
             <div class="form-group">
-                {{render_field(form.delete_tema, class ="form-control")}}
+                {{render_delete_field(form.delete_tema, 'tema')}}
             </div>
             <div class="form-group">
                 {{render_field(form.nom_tema, class ="form-control")}}
