--- a/project/templates/includes/_searchbar.html
+++ b/project/templates/includes/_searchbar.html
@@ -37,7 +37,7 @@
                               </div>
                           </div>
                           <div class="form-group">
-                            <label for="contains">Contiene las palabras</label>
+                            <label for="contains">Buscar los comentarios</label>
                             <input name="contains" class="form-control" type="text" />
                           </div>
                           <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
