--- a/project/static/css/global.css
+++ b/project/static/css/global.css
@@ -8,7 +8,15 @@
   float: left;
 }
 
+.li-link{
+    padding-bottom: 5px !important;
+    padding-top: 5px !important;
+}
 
+.header-padding{
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
 
 .organization {
 	display: none;
